@@ -4,6 +4,10 @@
 	https://bugs.edge.launchpad.net/ubuntu/+source/libxklavier/+bug/404924
 	* libxklavier/xklavier_private_xkb.h, libxklavier/xklavier_xkb.c: save
 	xinput error code and event type
+	* libxklavier/xklavier_evt.c, libxklavier/xklavier_evt_xkb.c,
+	libxklavier/xklavier_private.h, libxklavier/xklavier_private_xkb.h,
+	libxklavier/xklavier_xkb.c, libxklavier/xklavier_xmm.c: introduced
+	engine-specific error handling (for ignoring xinput errors)
 
 2009-08-29  svu
 
